--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'Lufga';
-  src: url('../fonts/LufgaRegular.woff') format('woff');
+  src: url('../fonts/LufgaRegular.woff2') format('woff2'),
+       url('../fonts/LufgaRegular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,7 +9,8 @@
 
 @font-face {
   font-family: 'Lufga';
-  src: url('../fonts/LufgaMedium.woff') format('woff');
+  src: url('../fonts/LufgaMedium.woff2') format('woff2'),
+       url('../fonts/LufgaMedium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -16,7 +18,8 @@
 
 @font-face {
   font-family: 'Lufga';
-  src: url('../fonts/LufgaBold.woff') format('woff');
+  src: url('../fonts/LufgaBold.woff2') format('woff2'),
+       url('../fonts/LufgaBold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -24,7 +27,8 @@
 
 @font-face {
   font-family: 'Satoshi';
-  src: url('../fonts/Satoshi-Regular.woff') format('woff');
+  src: url('../fonts/Satoshi-Regular.woff2') format('woff2'),
+       url('../fonts/Satoshi-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -32,7 +36,8 @@
 
 @font-face {
   font-family: 'Satoshi';
-  src: url('../fonts/Satoshi-Medium.woff') format('woff');
+  src: url('../fonts/Satoshi-Medium.woff2') format('woff2'),
+       url('../fonts/Satoshi-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
